<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".PlayerActivity"
    tools:ignore="ContentDescription">

    <TextView
        android:id="@+id/music"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/tv_music"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/music"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/photo" />

    <TextView
        android:id="@+id/tv_music_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/tv_title"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_music_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/tv_author"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold|italic" />

    <ImageView
        android:layout_below="@id/tv_music_title"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_love"/>

    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeline_seekBar"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="@string/tv_start_time"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tv_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeline_seekBar"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/tv_end_time"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal" />

    <SeekBar
        android:id="@+id/timeline_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_author"
        android:layout_marginTop="@dimen/_8sdp"
        android:progressBackgroundTint="@color/colorSecondProgressBackground"
        android:progressTint="@color/colorProgressBackground"
        android:thumbTint="@color/colorProgressBackground" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:background="@drawable/ic_play"
        android:layout_below="@id/tv_start_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"/>


</RelativeLayout>